# SDL2Run

Kuku/: CMakeLists.txt  Star7  main.cpp  test_image.cpp
